--- a/hw/i2c/Makefile.objs
+++ b/hw/i2c/Makefile.objs
@@ -11,3 +11,4 @@ common-obj-$(CONFIG_NRF51_SOC) += microbit_i2c.o
 common-obj-$(CONFIG_MPC_I2C) += mpc_i2c.o
 common-obj-$(CONFIG_OMAP) += omap_i2c.o
 common-obj-$(CONFIG_PPC4XX) += ppc4xx_i2c.o
+common-obj-$(CONFIG_ESP32) += esp32_i2c.o
